# Voice-Activity-Detection

./: .gitignore  CMakeLists.txt  README.md
header/: inference.hh  vad.hh
header/service/: service.grpc.pb.h  service.hh  service.pb.h
header/utils/: dataset.hh  train.hh  utils.hh
protobuf/: service.proto
src/: inference.cc  main.cpp  model.conf  test.cc  vad.cc
src/service/: service.cc  service.grpc.pb.cc  service.pb.cc
src/utils/: dataset.cc  train.cc  utils.cc
